<resources>
    <string name="app_name" translatable="false">GPS Helper Breda</string>
    <string name="logo_name" translatable="false">GPS Helper</string>
    <string name="logo_location" translatable="false">Breda</string>
    <string name="title_activity_maps">Map</string>
    <string name="RouteSelectorText">Kies route:</string>
    <string name="Route">Historische KM</string>
    <string name="AGS" translatable="false">AGS</string>
    <string name="information_name_activity">Informatie</string>
    <string name="information_about_title">Uitleg app</string>
    <string name="information_about_app">In deze applicatie staat een kaart met een vooraf gekozen route. Met behulp van deze applicatie kan de route gelopen worden. De route loopt tussen de verschillende waypoints. Bij ieder waypoint zal er extra informatie getoond worden. Als er van de route wordt afgeweken laat de applicatie dit weten. Succes en veel wandel plezier!</string>
    <string name="waypoint_name_activity">Bezienswaardigheden</string>
    <string name="map_style_resource" translatable="false">[{\"elementType\":\"geometry\",\"stylers\":[{\"color\":\"#f5f5f5\"}]},{\"elementType\":\"labels.icon\",\"stylers\":[{\"visibility\":\"off\"}]},{\"elementType\":\"labels.text.fill\",\"stylers\":[{\"color\":\"#616161\"}]},{\"elementType\":\"labels.text.stroke\",\"stylers\":[{\"color\":\"#f5f5f5\"}]},{\"featureType\":\"administrative.land_parcel\",\"elementType\":\"labels.text.fill\",\"stylers\":[{\"color\":\"#bdbdbd\"}]},{\"featureType\":\"poi\",\"elementType\":\"geometry\",\"stylers\":[{\"color\":\"#eeeeee\"}]},{\"featureType\":\"poi\",\"elementType\":\"labels.text.fill\",\"stylers\":[{\"color\":\"#757575\"}]},{\"featureType\":\"poi.park\",\"elementType\":\"geometry\",\"stylers\":[{\"color\":\"#e5e5e5\"}]},{\"featureType\":\"poi.park\",\"elementType\":\"labels.text.fill\",\"stylers\":[{\"color\":\"#9e9e9e\"}]},{\"featureType\":\"road\",\"elementType\":\"geometry\",\"stylers\":[{\"color\":\"#ffffff\"}]},{\"featureType\":\"road.arterial\",\"elementType\":\"labels.text.fill\",\"stylers\":[{\"color\":\"#757575\"}]},{\"featureType\":\"road.highway\",\"elementType\":\"geometry\",\"stylers\":[{\"color\":\"#dadada\"}]},{\"featureType\":\"road.highway\",\"elementType\":\"labels.text.fill\",\"stylers\":[{\"color\":\"#616161\"}]},{\"featureType\":\"road.local\",\"elementType\":\"labels.text.fill\",\"stylers\":[{\"color\":\"#9e9e9e\"}]},{\"featureType\":\"transit.line\",\"elementType\":\"geometry\",\"stylers\":[{\"color\":\"#e5e5e5\"}]},{\"featureType\":\"transit.station\",\"elementType\":\"geometry\",\"stylers\":[{\"color\":\"#eeeeee\"}]},{\"featureType\":\"water\",\"elementType\":\"geometry\",\"stylers\":[{\"color\":\"#c9c9c9\"}]},{\"featureType\":\"water\",\"elementType\":\"labels.text.fill\",\"stylers\":[{\"color\":\"#9e9e9e\"}]}]</string>
    <string name="waypoint_reached">Je bent aangekomen bij een bezienswaardigheid. De volgende is: </string>
    <string name="waypoint_reached_title">Punt bereikt</string>
    <string name="route_finished">Je hebt de route voltooid.</string>
    <string name="route_finished_title">Route klaar</string>
    <string name="route_offroute">Je bent van de route afgeraakt.</string>
    <string name="route_offroute_title">U dwaalt af</string>
    <string name="agree">JA</string>
    <string name="decline">NEE</string>
    <string name="popup_question">Weet u zeker dat u de route voortgang wilt resetten?</string>
    <string name="waypoint_check">U heeft deze bezienswaardigheid bezocht!</string>
    <string name="waypoint_todo">U heeft deze bezienswaardigheid nog niet bezocht!</string>
    <string name="description_1">Schuin aan de overkant op de Grote Markt vindt u het stadhuis van Breda
en tevens de dependance van de VVV.

De hoofdingang van het standhuis bevindt zich boven het bordes, dat bewaakt
wordt door twee zandstenen leeuwen. Het stadhuis, zoals dat er nu uitziet,
kwam pas in 1767 tot stand. Het zijn eigenlijk vier huizen, die toen door de
bouwmeester van Oranje, Philips Willem Schonck, achter één gevel werden
verborgen. Het oudste deel is de grote hal. Al in de vijftiende eeuw werd
daarnaast ook een zgn. \'Cleyn raedthuys\' in gebruik genomen. In 1898 kwam
het meest rechtse huis, het \'Liggend Hert\' erbij, dat nog steeds een aparte
gevel. heeft.

Ondanks het feit dat het stadhuis slechts beperkt geopend is voor het
publiek, willen we u de volgende informatie over de binnen zijde ervan toch
niet onthouden.
Vrouwe Justitia boven de hoofdingang en het houten beeld achter in de hal
geven aan dat in het stadhuis vroeger ook recht gesproken werd.
De balie van de vroegere rechtbank, eens staande tegen de achtermuur van de
hal, wordt nu in het Breda\'s Museum bewaard.
Links hangt een grote kopie van het beroemde schilderij van Velasques \'Las
Lanzas", dat de overgave van Breda aan de Spaanse bevelhebber Spinola (1625)
in beeld brengt.
Het oorspronkelijke schilderij hangt in het Prado te Madrid.
Het stadhuis wordt nog gebruikt voor openbare raadsvergaderingen en voor het
sluiten van huwelijken. De burgemeester, wethouders en gemeete-ambtenaren
huizen sinds februari 1992 in het nieuwe Stadskantoor aan de Claudius
Prinsenlaan in Breda. Door het poortgebouw rechts van het stadhuis lopen we
het Stadserf op. Midden op dit pleintje herinnert het beeldje De
Turfschipper van Gerarda Rueb, aan de legendarische overval in 1590 van
Adriaan van Bergen met zijn Turfschip. (De VVV Breda verkoopt hiervan een
replica).</string>
    <string name="description_2">U loopt via het poortje weer terug naar de Grote Markt en gaat linksaf.
De tweede straat links is de St. Janstraat. Hier gaat u in.

Op de hoek van de Halstraat / St. Janstraat staan we voor het gebouw met de
pilaren: het garnizoenscommando. Vroeger werd het gebouwtje \"hoofdwacht\"
genoemd. Voordat die hoofdwacht daar introk, stond op deze plaats de St.
Janskapel met daar weer achter de gebouwen van de Ridderorde van St. Jan.
De leden van deze orde verzorgden hier zieken en armen.
De straatnaam herinnert aan deze ridders van St. Jan. in de kapel begon de
grote stadsbrand van 1534.

De St. Janstraat heeft ooit ook de Veterstraat geheten, waarschijnlijk naar
de huydvetters of leerlooiers, die in de St. Janstraat hun beroep
uitoefenden.
Aan uw rechterhand in de St. Janstraat staat de Antonius van Paduakerk, een
opvallend rijk uitgevoerde waterstaatskerk. Deze kerk is in 1836 gebouwd als
eerste katholieke kerk na de schuilkerkenperiode, die officieel gebouwd
mocht worden. In 1853 werd het de eerste bisschopskerk (kathedraal) van het
nieuwe bisdom in Breda. De zetel van de bisschop van Breda keerde na een
afwezigheid van 32 jaar aan het begin van 2001 terug naar de Antoniuskerk
die daarmee de status van kathedraal opnieuw verwierf. Aan de voorgevel zijn
duidelijk de drie soorten antieke zuilen te zien. Van onder naar boven:
Dorische, Ionische en Corinthische zuilen. Het beeld boven de ingang stelt
\'de Godsdienst\' voor. Binnen valt direct de schitterende houten preekstoel
op. Hierin is in verschillende panelen het leven van H. Antonius uitgebeeld.
Even verder bevinden zich restanten of alleen maar herinneringen aan twee
zeer voorname hofhuizen, het Huis Ocrum, waarin tot 1994 de Kunstacademie
St. Joost was gevestigd en het Huis Hersbeeck, thans pastorie. In 1667
verbleven in beide huizen de Engelse gezanten, die deelnamen aan de
Vredesonderhandelingen van Breda. De afgevaardigden van de Raad van State
gebruikten het pand (nr. 16) wanneer zij in de stad op dienstreis waren,
maar ook koning Lodewijk Napoleon heeft er gelogeerd. De erker van dit pand
had een controlerende functie: de pastoor kon goed in de gaten houden wie er
naar de kerk ging.
Het Huis Ocrum (nr. 18) was van 1848 tot 1952 rooms burgerweeshuis. Dat kunt
u nog zien aan de kinderkopjes die aan de 19e eeuwse voorgevel van het
academiegebouw zijn aangebracht. De rode kleur van dit huis (na de
restauratie aangebracht) zal door de loop der jaren een mooie grijs rode
kleur van dit huis (na de restauratie aangebracht) zal door de loop der
jaren een mooie grijs rode kleur krijgen.
</string>
    <string name="description_3">Aan het eind van de St. Jansstraat gaat u rechtsaf de Molenstraat in.

In de Molenstraat ziet u recht de Bibliotheek, ontworpen door architect
Herman Hertzberger. Omdat de Molenstraat vrij smal is, heeft de architect
ruimte gecreëerd door de bibliotheek schuin oplopende wanden te geven. Op de
plaats van de bibliotheek (op de hoek met de Oude Vest) bevond zich vroeger
een poort. Boven deze poort bevond zich \'s Heeren Gevangenhuys, waar de
zwaarst gestraften werden ondergebracht. De plaats is nog met keitjes in het
asfalt aangegeven; de asfaltweg is de plaats van de oude stadsgracht.</string>
    <string name="description_4">Naast de Kloosterkazerne is het Chassé Theater gebouwd, ook ontworpen door Herman Hertzberger, de ontwerper van de bibliotheek.
De kopse kant van het aangrenzende kazernegebouw komt in dit nieuwe theater naar binnen. Het Casino en het Chassé Theater hebben een gezamenlijke ingang.</string>
    <string name="description_5">Op de hoek van Vlaszak en Veemarktstraat is in het trottoir een aanduiding te zien van de vroegere Gasthuispoort.
Ook een aantal stenen is nog bewaard gebleven.</string>
    <string name="description_6"></string>
    <string name="description_7"></string>
    <string name="description_8">Als u de brug overgaat, ziet u aan uw linkerhand het
Nassau-Baroniemonument.

Bij de ingang van het stadspark, het
Valkenberg, staat een monument
dat u iets vertelt over de wordings-
geschiedenis van de stad Breda, maar
vooral over de Heren van de stad uit het
Huis van Nassau en de 500-jarige band
tussen Breda en het Huis van Nassau.
Op 3 juli 1905 werd het Nassau-Baronie-
monument, zoals het officieel heet, met
veel feestelijk vertoon door Koningin
Wilhelmina onthuld. Het beeld herinnert
aan het feit, dat in 1404 Graaf Engelbert,
de eerste Bredase Nassau en zijn gemalin, Johanna van Polanen,
werden ingehuldigd als Heer en Vrouwe van Breda.
De ontwerper is de welbekende dr. P.J.H. Cuypers, die o.m. het
Rijksmuseum en het Centraal Station in Amsterdam ontwierp.
Op dit monument zijn niet alleen de wapenschilden van twintig
gemeenten in en rond de Baronie aangebracht maar ook de
Leeuw van Nassau die boven alles uittorent met koningskroon,
zwaard en wapenschild. In de drie reliëfs is de \'blijde incomste\'
van Graaf Engelbert en zijn gemalin afgebeeld. De poorters
bieden de sleutel van de stad aan.</string>
    <string name="description_9">Dit is The Light House.</string>
    <string name="description_10">Dit is de Stadhouderspoort.</string>
</resources>