<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MainBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logoBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/polyline"
                android:layout_width="277dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="#006B3D3D"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/polyline" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo_name"
                android:textAppearance="@style/Logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/logoSubtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/logo_location"
                android:textAppearance="@style/LogoSubText"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toTopOf="@+id/logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/RouteBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@+id/logoBox"
            app:layout_constraintStart_toStartOf="@+id/logoBox"
            app:layout_constraintTop_toBottomOf="@+id/logoBox">

            <TextView
                android:id="@+id/RouteSelectorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/RouteSelectorText"
                android:textAppearance="@style/Header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/route"
                style="@style/RouteButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorLightGray"
                android:onClick="SelectRoute"
                android:text="@string/Route"
                android:textAppearance="@style/ButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RouteSelectorText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/AGSLogo"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/AGS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ags_logo" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:background="#00FFFFFF"
        android:onClick="resetDatabase"
        android:text="Reset\nRoute"
        app:layout_constraintBottom_toBottomOf="@+id/AGSLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AGSLogo"
        app:layout_constraintTop_toTopOf="@+id/AGSLogo" />

    <Button
        android:id="@+id/NLBttn"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginStart="14dp"
        android:background="#00FFFFFF"
        android:onClick="resetDatabase"
        android:text="NL"
        app:layout_constraintBottom_toBottomOf="@+id/AGSLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/AGSLogo" />

    <Button
        android:id="@+id/ENGBttn"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:background="#00FFFFFF"
        android:onClick="resetDatabase"
        android:text="Eng"
        app:layout_constraintBottom_toBottomOf="@+id/NLBttn"
        app:layout_constraintEnd_toStartOf="@+id/AGSLogo"
        app:layout_constraintStart_toEndOf="@+id/NLBttn"
        app:layout_constraintTop_toTopOf="@+id/NLBttn" />

</androidx.constraintlayout.widget.ConstraintLayout>